@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2008,v 1.1114 2008/05/21 15:26:17 tnn Exp $
+$NetBSD: CHANGES-2008,v 1.1115 2008/05/21 15:26:43 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2008:
 
@@ -1885,3 +1885,4 @@ Changes to the packages collection and infrastructure in 2008:
 	Updated security/gsasl to 0.2.26 [obache 2008-05-21]
 	Updated pkgtools/pkg_leaves to 1.1 [tnn 2008-05-21]
 	Updated benchmarks/bonnie++ to 1.03c [wiz 2008-05-21]
+	Updated pkgtools/pkglint to 4.86 [abs 2008-05-21]
